@@ -964,6 +964,8 @@
 2) kernel: mips: bmips: fix bmips_wr_vec().<br>
 3) kernel: ralink_arch: NR_IRQS is no longer dependent from BITS_PER_LONG.<br>
 4) kernel: net: udp: fix behavior of wrong checksums.<br>
+5) kernel: jhash: update jhash_[321]words functions to use correct initval.<br>
+6) kernel: sfhash: add generic inline helper for more gcc optimize effect.<br>
 <br>
 <br>
 <b>TODO:</b><br>
